--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.avbravo</groupId>
     <artifactId>sorteo</artifactId>
-    <version>0.7</version>
+    <version>0.8</version>
     <packaging>war</packaging>
 
     <name>sorteo</name>
@@ -124,12 +124,12 @@
             <artifactId>jmoordbutils</artifactId>
             <version>0.45</version>
         </dependency>
-        <dependency>
+<!--        <dependency>
             <groupId>javax.websocket</groupId>
             <artifactId>javax.websocket-api</artifactId>
             <version>1.1</version>
             <scope>provided</scope>
-        </dependency>
+        </dependency>-->
               <dependency>
             <groupId>com.github.avbravo</groupId>
             <artifactId>jmoordbbootfacespatch</artifactId>
